ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    run: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
spec:
  rules:
    - host: k8s.maslick.ru
      http:
        paths:
          - path: /hi
            backend:
              serviceName: web
              servicePort: 8080
  tls:
    - secretName: tls-prod-cert
      hosts:
        - k8s.maslick.ru
